--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=fruitDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "VeggieConnection": "Server=(localdb)\\mssqllocaldb;Database=veggieDatabase;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "FruitConnection": "Server=(localdb)\\mssqllocaldb;Database=fruitDatabase;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
